# image_gen_mcp

./: .env.example  .gitignore  Dockerfile  README.md  index.ts  package-lock.json  package.json  prompts.py  prompts.ts  pyproject.toml  requirements.txt  server.py  tsconfig.json
resources/: image-picker.css  image-picker.tsx
