[project]
name = "mcp-server-gemini-image-generator"
version = "0.1.0"
description = "Generate and transform images using Google's Gemini AI model through MCP"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["mcp", "llm", "gemini", "image-generation", "ai"]
license = { text = "MIT" }
dependencies = [
    "mcp-use>=0.2.0",
    "mcp>=1.0.0",
    "google-genai>=1.7.0",
    "pillow>=11.1.0",
    "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["server"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pyright>=1.1.389", "ruff>=0.7.3"]
